changed background picture

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ section::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("https://source.unsplash.com/WLUHO9A_xik/1600x900");
+  background: url("https://domf5oio6qrcr.cloudfront.net/medialibrary/7909/b8a1309a-ba53-48c7-bca3-9c36aab2338a.jpg");
   opacity: 0.6;
   z-index: -2;
 }
